# RawViewer2

./: CMakeLists.txt  LICENSE  README.md  RawTool设计文档.md  RawViewer2.pro  RawViewer2设计文档.md  build.bat  color_space.cpp  feature.md  frame.cpp  frame.h  frame.ui  issues.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myRC.rc  rawfile.cpp  rawfile.h  toolbar.qrc
data/: animal_256x256.bgr24  animal_256x256.i420  animal_256x256_bak.nv21  tool_981x763.nv21  tool_981x763.rgb24
lang/: lang_en.ts  lang_zh.qm  lang_zh.ts
src/: EncodingImage.cpp  EncodingImage.h  ImageWindow.cpp  ImageWindow.h  RawImage.cpp  RawImage.h  color_space.h  frame.h  image.cpp  image.h  main.cpp  mainwindow.cpp  mainwindow.h  rawfile.cpp
ui/: frame.ui  mainwindow.ui  toolbar.qrc
